--- a/action.yml
+++ b/action.yml
@@ -19,9 +19,9 @@ jobs:
           user: AndreasPB
           template: classic
           base: header
+          config_display: large
           config_timezone: Europe/Copenhagen
           plugin_notable: yes
-          plugin_projects: yes
-          plugin_projects_limit: 4
+          plugin_notable_repositories: yes
           plugin_stars: yes
           plugin_stars_limit: 4
